--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>ABHISHEK<br>THE ANALYST<br>PORTFOLIO</h1>
-											<p>Results-driven Analyst with 5 years of experience in data analysis within the FMCG, Data Analytics & Consulting sectors with a track record of success in generating valuable insights to inform data-driven strategies. 
+											<p>Analytical Professional with 5 years of experience in data analysis within the FMCG, Data Analytics & Consulting sectors with a track record of success in generating valuable insights to inform data-driven strategies. 
 												<br>Leveraged Power BI, Tableau, SQL, Excel, Python to empower decision making. <br><a href="https://www.linkedin.com/in/venkata-abhishek-gorrila/">@AbhishekTheAnalyst</a>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
