--- a/index.html
+++ b/index.html
@@ -80,6 +80,33 @@
 								</ul>
 							</article>
 
+                            
+
+						<!-- Featured Post -->
+                        <article class="post featured">
+                            <header class="major">
+                                <span class="date"></span>
+                                <h2><a href="https://github.com/AbhishekTheAnalyst/US_Superstore_Analysis_with_Tableau/blob/main/README.md">📈 Unveiling Data Insights in US_Superstore
+                                    Sales_Performance through Tableau<br />
+                                </a></h2>
+                                <p>Designed an interactive Tableau dashboard  to unravel the insights of an US_Superstore_Sales_Performance.
+
+                                    <br />
+                                </p>
+</header>
+                            <a href="https://github.com/AbhishekTheAnalyst/US_Superstore_Analysis_with_Tableau/blob/main/README.md" class="image main"><img src="images/supers.jpg" alt="" /></a>
+                            <ul class="actions special">
+                                <li><a href="https://github.com/AbhishekTheAnalyst/US_Superstore_Analysis_with_Tableau/blob/main/README.md" class="button large">View Project</a></li>
+                            </ul>
+                        </article>
+
+
+
+
+
+
+
+
 						<!-- Posts -->
 							
 									</ul>
